--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/tohfas/Personal_Dashboard",
   "name": "personal-dashboard",
   "version": "0.1.0",
   "private": true,
@@ -12,7 +13,10 @@
     "tailwindcss": "^3.4.1",
     "web-vitals": "^2.1.4"
   },
+
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "PORT=4000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -35,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
