--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/tohfas/Personal_Dashboard",
+  "homepage": "https://tohfas.github.io/Personal_Dashboard/",
   "name": "personal-dashboard",
   "version": "0.1.0",
   "private": true,
